Fix div alignment

--- a/style/less/kent/structure.less
+++ b/style/less/kent/structure.less
@@ -178,20 +178,15 @@
 		    	margin: 0;
 		    	overflow: visible;
 
-		        .region-content {
-			    	overflow: auto;
-			    	.container-fluid();
-
-			    	> div {
-			    		> .h1,
-			    		> .h2,
-			    		> .h3,
-			    		> h1,
-			    		> h2,
-			    		> h3 {
-			    			margin-top: 0;
-			    		}
-			    	}
+		        > div[role='main'] {
+		    		> .h1,
+		    		> .h2,
+		    		> .h3,
+		    		> h1,
+		    		> h2,
+		    		> h3 {
+		    			margin-top: 0;
+		    		}
 			    }
 		    }
 	    }
